<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:background="@drawable/background_mario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context="com.proven.cat.a7ymedio.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/textDificultad"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Dificultad: "
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="19dp"/>

        <TextView
            android:id="@+id/valorDificultad"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="19dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="19dp"
            android:id="@+id/cronometro"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imgPos0"
                android:layout_width="100dp"
                android:layout_height="143dp"
                android:contentDescription="@string/pos0"
                android:src="@drawable/back" />

            <ImageView
                android:id="@+id/imgPos1"
                android:layout_width="100dp"
                android:layout_height="143dp"
                android:contentDescription="@string/pos1"
                android:src="@drawable/back" />

            <ImageView
                android:id="@+id/imgPos2"
                android:layout_width="100dp"
                android:layout_height="143dp"
                android:contentDescription="@string/pos2"
                android:src="@drawable/back" />

            <ImageView
                android:id="@+id/imgPos3"
                android:layout_width="100dp"
                android:layout_height="143dp"
                android:contentDescription="@string/pos3"
                android:src="@drawable/back" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgPos4"
                android:layout_width="100dp"
                android:layout_height="143dp"
                android:contentDescription="@string/pos4"
                android:src="@drawable/back" />

            <ImageView
                android:id="@+id/imgPos5"
                android:layout_width="100dp"
                android:layout_height="143dp"
                android:contentDescription="@string/pos5"
                android:src="@drawable/back" />

            <ImageView
                android:id="@+id/imgPos6"
                android:layout_width="100dp"
                android:layout_height="143dp"
                android:contentDescription="@string/pos6"
                android:src="@drawable/back" />

            <ImageView
                android:id="@+id/imgPos7"
                android:layout_width="100dp"
                android:layout_height="143dp"
                android:contentDescription="@string/pos7"
                android:src="@drawable/back" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomdata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="19dp"
            />


        <TextView
            android:id="@+id/textPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="Puntos: "
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="19dp"
            />

        <TextView
            android:id="@+id/textMovements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:text="@string/movements"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="19dp"
            />

    </LinearLayout>


</LinearLayout>



